--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Criptic",
+  "name": "criptic-sharpeai",
   "private": true,
   "version": "1.1.0",
   "scripts": {
     "clean": "rimraf \"{node_modules,.next,out.cache}\"",
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
