--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
     "@tailwindcss/typography": "0.5.0",
     "@types/react-dom": "^18.0.6",
     "@usedapp/core": "^1.1.2",
+    "async_hooks": "^1.0.0",
     "axios": "0.24.0",
+    "cheerio": "^1.0.0-rc.12",
+    "child_process": "^1.0.2",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "date-fns": "2.28.0",
     "dayjs": "1.11.0",
     "ethers": "^5.6.9",
+    "express": "4.17.1",
     "framer-motion": "6.2.8",
     "jotai": "1.7.2",
     "js-cookie": "3.0.1",
     "little-state-machine": "4.2.0",
     "lodash": "4.17.21",
+    "net": "^1.0.2",
     "next": "12.1.6",
     "next-pwa": "5.5.4",
     "next-seo": "5.4.0",
@@ -37,6 +43,7 @@
     "next-themes": "0.2.0",
     "overlayscrollbars": "1.13.2",
     "overlayscrollbars-react": "0.3.0",
+    "puppeteer": "^16.1.0",
     "rc-slider": "10.0.0-alpha.4",
     "react": "^18.2.0",
     "react-countdown": "2.3.2",
@@ -47,8 +54,10 @@
     "react-share": "4.4.0",
     "react-table": "7.8.0",
     "react-use": "17.4.0",
+    "readline": "^1.3.0",
     "recharts": "2.1.9",
     "swiper": "8.2.2",
+    "tls": "^0.0.1",
     "uuid": "8.3.2",
     "web3modal": "1.9.6",
     "yup": "0.32.11"
