--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "date-fns": "2.28.0",
     "dayjs": "1.11.0",
+    "emailjs-com": "^3.2.0",
     "ethers": "^5.6.9",
     "express": "4.17.1",
     "framer-motion": "6.2.8",
