--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@headlessui/react": "1.6.5",
     "@hookform/resolvers": "2.9.1",
     "@material-ui/core": "^4.12.4",
